<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator"
    android:background="@android:drawable/alert_light_frame"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <TextView
            android:id="@+id/txtfady"
            android:layout_width="408dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text=""
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"

        >


        <Button
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="0.2"
            android:background="@android:color/holo_blue_light"
            android:text="@string/c"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnequal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="0.2"
            android:background="@android:color/holo_blue_light"
            android:text="@string/equal"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp">


        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="0.2"
            android:background="@android:color/holo_orange_light"
            android:text="@string/one"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="0.2"
            android:background="@android:color/holo_orange_light"
            android:text="@string/two"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="0.2"
            android:background="@android:color/holo_orange_light"
            android:text="@string/three"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_div"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="0.2"
            android:background="@android:color/holo_green_light"
            android:text="@string/by"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp">


        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="0.2"
            android:background="@android:color/holo_orange_light"
            android:text="@string/four"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="0.2"
            android:background="@android:color/holo_orange_light"
            android:text="@string/five"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="0.2"
            android:background="@android:color/holo_orange_light"
            android:text="@string/six"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_min"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="0.2"
            android:background="@android:color/holo_green_light"
            android:text="@string/minous"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp">


        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="0.2"
            android:background="@android:color/holo_orange_light"
            android:text="@string/seven"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="0.2"
            android:background="@android:color/holo_orange_light"
            android:text="@string/eight"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="0.2"
            android:background="@android:color/holo_orange_light"
            android:text="@string/nine"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_x"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="0.2"
            android:background="@android:color/holo_green_light"
            android:text="@string/time"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp">


        <Button
            android:id="@+id/btn_dot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="0.2"
            android:background="@android:color/holo_green_light"
            android:text="@string/dot"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="0.2"
            android:background="@android:color/holo_orange_light"
            android:text="@string/zero"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_n"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="0.2"
            android:background="@android:color/holo_green_light"
            android:text="@string/nespa"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="0.2"
            android:background="@android:color/holo_green_light"
            android:text="@string/plus"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sof_ech"
        android:visibility="invisible"
        android:textColor="@color/teal_200" />

</LinearLayout>