<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".word"
android:orientation="vertical">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_the_text"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:textSize="14dp" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <Spinner
        android:id="@+id/size_spinner"
        android:layout_width="131dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:spinnerMode="dialog" />



    <CheckBox
        android:id="@+id/chk_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/bold"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/chk_I"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/I"
        android:textStyle="italic" />

    <CheckBox
        android:id="@+id/chk_u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/u"
        android:layout_marginLeft="20dp"
        />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/color_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:textColor="#FF0000"
        android:textSize="20sp" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/font_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:spinnerMode="dialog" />



</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btn_left"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:backgroundTint="@color/purple_500"
        android:layout_marginLeft="10dp"
        android:onClick="left_aligen"
        android:clickable="true"
        android:background="@drawable/left_align" />

    <Button
        android:id="@+id/btn_ce"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginLeft="120dp"
        android:onClick="center_aligen"
        android:clickable="true"
        android:background="@drawable/center_align" />

    <Button
        android:id="@+id/btn_r"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:backgroundTint="@color/purple_500"
        android:layout_marginLeft="130dp"
        android:onClick="right_aligen"
        android:clickable="true"
        android:background="@drawable/right_align" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/file_name" />

    <EditText
        android:id="@+id/fName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/file_name"
        android:inputType="textPersonName" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btn_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="@drawable/btn_style"
        android:clickable="true"
        android:focusable="true"
        android:onClick="newFile"
        android:text="@string/_new" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_style"
        android:text="@string/save"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginLeft="60dp"
        android:onClick="saved"
        />

    <Button
        android:id="@+id/btn_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:background="@drawable/btn_style"
        android:clickable="true"
        android:focusable="true"
        android:onClick="load"
        android:text="@string/load"
        app:iconTint="@color/blue" />
</LinearLayout>

<TextView
    android:id="@+id/company"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/sof_ech"
    android:visibility="invisible"
    android:textAlignment="center"
    android:textSize="14sp"
    android:textStyle="bold" />



</LinearLayout>